  but not implemented.
- New option: followFaceDirection. When set to 1, always look at master.
- Faster autofollow.
- "pl" and "ml" show more information now.
- Added support for recvpackets.txt (code taken from ModKore).
- Support secure login. New config option: secure
  0 = no secure login (iRO)
  1 = secure login method 1
  2 = secure login method 2


------------------------------------------------------


ChangeLog for skore-revamped
=============================

Based on blueviper22's mod for RO 4.0:

- Merged X-Kore with skore-revamped. You can switch between "normal"
  (console) Kore and X-Kore by setting the config option "XKore"
  to 0 or 1. Add these to your config.txt:
  XKore 1
  exeName ragexe.exe
  commandPrefix ;

(Why didn't Kura do this in the first place? Maintaining one codebase is
easier than maintaining two.)


- More flexible packet debugger.
  * Removed option debug_packet
  * New options:
    debugPacket_unparsed: Dump unparsed packets
    debugPacket_received: Display all received packet switches
    debugPacket_ro_sent:  Display packet switches sent by the
                          RO client (only in X-Kore mode)
    debugPacket_sent:     Display packet switches sent by Kore
    debugPacket_exclude:  All packets switches that you want
                          to ignore, seperated by a comma.

- New config options:
  * followEmotion
  * followEmotion_distance
  When follow and followEmotion are on, imitate the master's
  emoticons if he's within followEmotion_distance blocks distance.

- Servers will now be hammered less if Kore gets disconnected.
  * New option in timeouts.txt: reconnect x
    (x is the number of seconds to wait before relogging in.)

- Improved anti-kill steal routines.
  * Bug fixes.
  * sendAttackStop() now actually works.
  * Doesn't walk away anymore when KS'ed.
  * The stun bug *should* be fixed by now but is untested.

- Code cleanups
  * Added comments to some parts of the code.